<resources>
    <string name="app_name">Products</string>
    <string name="title_activity_navgation_drawer">NavgationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="About">About</string>
    <string name="feedback">Feedback</string>
    <string name="contact">Chat With Us </string>
    <string name="logout">Logout</string>
    <string name="title_activity_my_location">Map</string>
    <string name="title_activity_mylocation">Map</string>
    <string name="fav">Saved</string>
    <string name="offer">Offers</string>
    <string name="default_notification_channel_id">channel-01</string>
</resources>
