<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/fav"
            android:icon="@drawable/fav"
            android:title="@string/fav" />
        <item
            android:id="@+id/offer"
            android:icon="@drawable/offer"
            android:title="@string/offer" />
        <item
            android:id="@+id/location"
            android:icon="@drawable/location"
            android:title="@string/nearby" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/About" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback" />

            <item
                android:id="@+id/contact"
                android:icon="@drawable/contact"
                android:title="@string/contact" />
            <item
                android:id="@+id/login"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
</group>

</menu>
